--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
-    "axios": "^0.26.1",
+    "axios": "^1.4.0",
     "framer-motion": "^6.2.8",
     "react": "^17.0.2",
     "react-animated-css": "^1.2.1",
@@ -20,14 +20,15 @@
     "react-intersection-observer": "^8.33.1",
     "react-multi-carousel": "^2.8.0",
     "react-responsive-carousel": "^3.2.23",
-    "react-router-dom": "^6.2.2",
+    "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.0",
+    "regenerator-runtime": "^0.13.11",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "jest test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -47,5 +48,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/preset-env": "^7.21.4",
+    "@babel/preset-react": "^7.18.6",
+    "jest": "^27.5.1"
   }
 }
